syntax = "proto3";
package chipmunkApi;
option go_package = "github.com/mrNobody95/Gate/services/chipmunk/api";
import "api/src/misc.proto";
import "api/src/models.proto";

service ohlcService {
  rpc AddMarket(AddMarketRequest) returns (api.Void);
  rpc ReturnCandles(BufferedCandlesRequest) returns (api.Candles);
  rpc ReturnLastCandle(BufferedCandlesRequest) returns (api.Candle);
  rpc CancelWorker(CancelWorkerRequest) returns (api.Void);
}

message AddMarketRequest {
  // @inject_tag: json:"resolution"
  api.Resolution Resolution = 1;
  // @inject_tag: json:"market"
  api.Market Market = 2;
}

message BufferedCandlesRequest {
  // @inject_tag: json:"resolution_id"
  string ResolutionID = 1;
  // @inject_tag: json:"market_id"
  string MarketID = 2;
}

message CancelWorkerRequest {
  // @inject_tag: json:"resolution_id"
  string ResolutionID = 1;
  // @inject_tag: json:"market_id"
  string MarketID = 2;
}